# grimm

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml
android/: CMakeLists.txt  WalletJNI.java  common.cpp  common.h  jni.cpp  node_model.cpp  node_model.h  wallet_model.cpp  wallet_model.h
core/: block_crypt.cpp  block_crypt.h  block_rw.cpp  block_rw.h  block_validation.cpp  chainwork.cpp  difficulty.cpp  difficulty.h  ecc.cpp  ecc.h  ecc_bulletproof.cpp  ecc_native.h  fly_client.cpp  fly_client.h  lightning.cpp  lightning.h  merkle.cpp  merkle.h  navigator.cpp  navigator.h  negotiator.cpp  negotiator.h  peer_manager.cpp  peer_manager.h  proto.cpp  proto.h  radixtree.cpp  radixtree.h  serialization_adapters.h  treasury.cpp  treasury.h  uintBig.cpp  uintBig.h
explorer/: CMakeLists.txt  adapter.cpp  adapter.h  explorer_node.cpp  server.cpp  server.h
grimm/: CMakeLists.txt  cli.cpp  grimm-node.cfg
http/: http_client.cpp  http_client.h  http_connection.h  http_json_serializer.cpp  http_json_serializer.h  http_msg_creator.cpp  http_msg_creator.h  http_msg_reader.cpp  http_msg_reader.h
mnemonic/: mnemonic.cpp  mnemonic.h
node/: CMakeLists.txt  db.cpp  db.h  node.cpp  node.h  node_client.cpp  node_client.h  processor.cpp  processor.h  txpool.cpp  txpool.h
p2p/: connection.h  line_protocol.h  msg_reader.cpp  msg_reader.h  msg_serializer.cpp  msg_serializer.h  protocol.h  protocol_base.cpp  protocol_base.h
pow/: CMakeLists.txt  equihash.cpp  external_pow.h  miner_client.cpp  opencl_pow.cpp  stratum.cpp  stratum.h  stratum_server.cpp  stratum_server.h
pow/unittests/: CMakeLists.txt  equihash_test.cpp  server_stub.cpp  stratum_test.cpp
ui/: CMakeLists.txt  Info.plist.in  grimm.desktop.in  grimm.rc.in  ui.cpp  (+1 more)
(+244 files in other folders)
